--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
   <!-- Include the preprocessed network data -->
-  <script src="network-data.js"></script>
+  <script src="/network-data.js"></script>
   
   <div class="min-h-screen bg-gray-50">
     <!-- Header -->
