--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
 </head>
 <body>
   <!-- Include the preprocessed network data -->
-  <script src="network-data.js"></script>
-  
+ <!-- <script src="network-data.js"></script>-->
+
+  <script src="https://shanthissvm.github.io/job-network-viz/network-data.js"> </script>
   <div class="min-h-screen bg-gray-50">
     <!-- Header -->
     <header class="bg-blue-600 text-white p-4">
