--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <!-- Tailwind CSS via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  
+  <script src="network-data.js"></script>  
   <style>
     body {
       font-family: 'Inter', system-ui, -apple-system, sans-serif;
@@ -98,7 +98,7 @@
   <!-- Include the preprocessed network data -->
  <!-- <script src="network-data.js"></script>-->
 
-  <script src="https://shanthissvm.github.io/job-network-viz/network-data.js"> </script>
+ <!-- <script src="https://shanthissvm.github.io/job-network-viz/network-data.js"> </script>  -->
   <div class="min-h-screen bg-gray-50">
     <!-- Header -->
     <header class="bg-blue-600 text-white p-4">
