--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Tailwind CSS via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <script src='network-data.js'></script> 
+  <script src="network-data.js"></script> 
   
   <style>
     body {
