--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   
   <!-- Tailwind CSS via CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
+  <link href="tailwind.min.css" rel="stylesheet">
+  
   <script src="network-data.js"></script> 
   
   <style>
