--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- D3.js -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  
+  <script src="network-data.js" defer></script>   
   <style>
     /* Base styles */
     body {
