--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Data file (Base64 encoded Excel file) -->
     <script>
         // This will be replaced with the actual Excel file content
-        const excelFileBase64 = "YOUR_BASE64_ENCODED_EXCEL_FILE_HERE";
+        const excelFileBase64 = "excel_base64.txt";
         
         // Create a virtual file system for the React component
         window.fs = {
