--- a/index.html
+++ b/index.html
@@ -454,6 +454,12 @@
                                         <p><strong>Industry:</strong> {selectedJobDetails["Industry"]}</p>
                                         <p><strong>Salary Range:</strong> {selectedJobDetails["Salary Range"]}</p>
                                         <p><strong>Work Mode:</strong> {selectedJobDetails["Work Mode"]}</p>
+                                        <p><strong>Strength:</strong> {selectedJobDetails["Strength"]}</p>
+                                         <ul className="list-disc pl-5">
+                                                {selectedJob.strengths.map((strength, index) => (
+                                                  <li key={index}>{strength}</li>
+                                                ))}
+                                              </ul>
                                         <p className="mt-2">
                                             <a 
                                                 href={selectedJobDetails["Source Link"]} 
